--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Files/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Files/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<ClientPortal.Web.Models.FileUploadInfo>
 
+<h3>Files</h3>
+
 <div id="divFileList">
     @Html.Partial("List")
 </div>
