--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Files/List.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Files/List.cshtml
@@ -6,6 +6,7 @@
     <tr>
         <td>@file.UploadDate</td>
         <td>@file.Filename</td>
+@*        <td>@Html.ActionLink("process", "Process", new { Id = file.Id })</td>*@
     </tr>
 }
 </table>
