started goals setup, public to gogrid

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Dashboard</h2>
 
-<div class="panel six columns">
+<div class="panel five columns">
 <table>
     <tr>
         <th></th>
@@ -34,7 +34,7 @@
 </table>
 </div>
 
-<div class="panel six columns">
+<div class="panel five columns">
     <table>
         <tr>
             <td>
