--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
@@ -29,6 +29,7 @@
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/foundation")
 
     @*Use the Scripts section to define page specific scripts*@
