--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
@@ -3,9 +3,9 @@
 <table>
     <tr>
         <td>@Model.Name</td>
-        <td>@Model.Type</td>
+        <td>@Model.TypeId</td>
         <td>@Model.Offer</td>
-        <td>@Model.Metric</td>
+        <td>@Model.MetricId</td>
         <td>@Model.Target</td>
     </tr>
 </table>
