--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
@@ -3,7 +3,7 @@
 <tr>
     <td>@Model.Name</td>
     <td>@Model.TypeId</td>
-    <td>@Model.Offer</td>
+    <td>@Model.OfferName</td>
     <td>@Model.MetricId</td>
     <td>@Model.Target</td>
 </tr>
